Bug 417228 - Bookmarks outside the three default folders aren't restored (r=mano, a=schrep)